--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -7,13 +7,13 @@
 <%=f.text_area :description%></p>
 
 <p><%=f.label :address%><br/>
-<%=f.text_field :adress%></p>
+<%=f.text_field :address%></p>
 
 <p><%=f.label :phoneNumber%><br/>
 <%=f.text_field :phoneNumber%></p>
 
 <h3>ГОдини роботи</h3>
 
-<h3>фоточки (можливість мульти загрузки через cariarvave)</h3>
+<p><%= f.file_field :images, multiple: true %></p>
 
 <p><%=f.submit :commit%></p>
