--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,1 +1,7 @@
-<h2>Тут повинен бути навбар</h2>
+<h2>
+<%if user_signed_in? %>
+      	<%= link_to destroy_user_session_path, method: :delete do%><span class="glyphicon glyphicon-log-out"></span>Вихід<%end%><
+      	      <%else%>
+      	<%= link_to new_user_session_path do %><span class="glyphicon glyphicon-log-in"></span> Вхід<%end%>
+<%end%>
+</h2>
