--- a/app/views/institutions/new.html.erb
+++ b/app/views/institutions/new.html.erb
@@ -1,3 +1,3 @@
-<%=form_for :institution, url:institutions_path  do |f| %>
+<%=form_for @institution, url:institutions_path  do |f| %>
 	<%=render "institutions/form", f:f%>
 <%end%>
