--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -1,5 +1,8 @@
 <h2><%=@institution.name%></h2>
 Інші дані
+<%@institution.category.each do |category|%>
+<%=link_to category.name, category_path(category.name)%>
+<%end%>
 <%@institution.images.each do |foto|%>
 <%=image_tag foto%>
 <%end%>
