style for navbar index

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,15 @@
-<h2>Тут повинен бути футер</h2>
+ <style>
+.footer {
+    
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
+    color: white;
+    text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p>Туй чуть позже буде хлам</p>
+</div> 
