--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img style="position: relative;" src="images/index4.jpg" alt="New York">
+         </div>
+  </div> 
+</div>
