--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -31,6 +31,10 @@
   		</div>
   		<br/>
   		<br/>
+      <div>
+        <p><%=f.label :text%><br/>
+        <%=f.text_area :text %></p>
+      </div>
   <div class="actions">
     <%= f.submit %>
   </div>
