update show institution rating

--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -31,7 +31,9 @@
 	<%end%>
 
 <%else%>
-
+<hr>
+<h3>Ваша Рекомендація:</h3>
+  <%= render @rating%>
 <%end%>
 <hr>
 <h3>Рекомендації користувачів:</h3>
