--- a/app/views/userparams/_form.html.erb
+++ b/app/views/userparams/_form.html.erb
@@ -3,6 +3,11 @@
 	<%= f.text_field :name, class: 'form-control',autofocus: true %>
 </div>
 
+<div>
+<%=f.label :avatar%>
+<%= f.file_field :avatar%>
+</div>
+
 <div class="form-group">
 	<%= f.label :full_name %>
 	<%= f.text_field :full_name, class: 'form-control' %>
