--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
   
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img style="position: relative;" src="images/index4.jpg" alt="New York">
+      <img style="position: relative;" src="images/index4.jpg" alt="rest">
          </div>
   </div> 
 </div>
