--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 
-<%if user_signed_in? %>
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" <%if !@backgroung %> style="position: relative
+" <%end%>>
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -8,14 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <b> <span class="navbar-brand" href="#">QuickChik</span></b>
+     <b> <%=link_to "QuickChik", root_path, class:"navbar-brand"%></b>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">PROFIL</a></li>
         <li><a href="/pages/about">ABOUT</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CATEGORY
+          <a class="dropdown-toggle" data-toggle="dropdown">CATEGORY
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
@@ -24,34 +23,29 @@
             <%end%> 
           </ul>
         </li>
-        <li><%= link_to destroy_user_session_path, method: :delete do%><span class="glyphicon glyphicon-log-out"></span></li><%end%>
+        <%if user_signed_in? %>
+          <li>
+            <a class="dropdown-toggle" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-user"></span>
+            </a>
+            <ul class="dropdown-menu"> 
+              <li><b> <%= current_user.userparam.name%> </b></li>
+              <li>
+              <%=link_to "Профіль", userparam_path(current_user.userparam.id)%>
+              </li>
+              <li> 
+                <%= link_to destroy_user_session_path, method: :delete do%><span class="glyphicon glyphicon-log-out"></span><%end%>
+              </li>
+            </ul>
+          </li>
+         <%else%>
+            <li>
+            <%= link_to new_user_session_path do %><span class="glyphicon glyphicon-log-in"></span><%end%>
+            </li>
+          
+        <%end%>
       </ul>
     </div>
   </div>
 </nav>
 
- <%else%>
-
- <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-     <b> <span class="navbar-brand" href="#">QuickChik</span></b>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">HOME</a></li>
-        <li><a href="/pages/about">ABOUT</a></li>
-        <li><%= link_to new_user_session_path do %><span class="glyphicon glyphicon-log-in"></span></li>
-        <%end%>
-        </ul>
-        </div>
-        </div>
-        </nav>
-
-      </ul>
-<%end%>
