--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
   </head>
 
   <body>
-    <%=render 'layouts/navbar'%>
-    <%= yield %>
-    <%=render 'layouts/footer'%>
+      <%=render 'layouts/navbar'%>
+    <div>
+      <%= yield %>
+    </div>
+    <div>
+      <%=render 'layouts/footer'%>
+    </div>
   </body>
 </html>
