--- a/app/views/institutions/_institution.html.erb
+++ b/app/views/institutions/_institution.html.erb
@@ -1,2 +1,12 @@
-Коротка форма для переліку у списку
-<p><%=link_to institution.name, institution_path(institution.id)%><p>
+<div class="container-fluid" >
+  <div class="text-center">
+<h2><%= @category.name %></h2>
+</div>
+</div>
+<div style="margin-left: 10%;">
+<h3><%=link_to institution.name, institution_path(institution.id)%></h3>
+</div>
+
+
+
+  
