--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@ footer {
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
+    margin-top: 20%;
 }
 
 footer a {
@@ -20,6 +21,6 @@ footer a:hover {
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>dfkgklg</p>
+  <p>UzNU 2018</p>
 </footer>
 
