add style 4 rating, index, about

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,31 @@
+<style>
+#header_lower, #header_lower2 {
+	width: 40%;
+	margin: 50px auto;
+	display: inline-block;
+}
+
+#header_lower {
+	margin: 50px 5%;
+}
+
+#header_lower2 {
+	margin: 50px 5%;
+	float: right;
+}
+
+#header_content_boxcontent, #header_content_boxcontent2 {
+	text-align: center;
+	font-family: Century Gothic;
+}
+
+#header_content_boxline, #header_content_boxline2 {
+	font-family: Century Gothic;
+	text-align: center;
+}
+
+</style>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
   <div class="carousel-inner" role="listbox">
@@ -5,4 +33,24 @@
       <img src="/images/index4.jpg" alt="rest">
          </div>
   </div> 
+</div>
+
+<div id="header_lower">
+<h1 id="header_content_boxline">
+Who we ARE?
+</h1>
+<div id="header_content_boxcontent">
+The faculty of  Information Technologiestrains specialists of qualification level 0501 “Informatics and IT-equipment”; bachelor education for 6.050101 “Computer science”, specialists and masters with the specialisation in 7.05010101, 8.05010101 “Information Systems and Technologies”, and also bachelor with the specialisation in 6.050103 “Software engineering”, specialists and masters with the specialisation in 7.05010301, 8.05010301 “System software”.
+
+Graduate students in "Information Control Systems and Technologies" get specialty "specialist in the field of information management systems and technologies, teacher of informatics" (specialization: modern information technologies, modern technologies of information protection) - "Software Engineer, teacher of computer skills" (specializations: internet client-server systems, modern technologies of software products). Double specialty graduates are able to successfully compete in the labor market.
+</div>
+</div>
+
+<div id="header_lower2">
+	<h1 id="header_content_boxline2">
+		How you can join us?
+	</h1>
+<div id="header_content_boxcontent2">
+You can send email to us, if you want to do labworks instead of us.
+</div>
 </div>
