--- a/app/views/ratings/_rating.html.erb
+++ b/app/views/ratings/_rating.html.erb
@@ -1,5 +1,5 @@
 <div>
-<hr>
+
     <%=link_to rating_positiv_path(rating.id) do%>
       <span class="glyphicon glyphicon-plus"></span>
     <%end%>
@@ -7,12 +7,14 @@
     <%=link_to rating_negativ_path(rating.id) do%>
       <span class="glyphicon glyphicon-minus"></span>
     <%end%>
-kitchen: <div id="user_kitchen<%=rating.id%>"></div>
-servise: <div id="user_servise<%=rating.id%>"></div>
-cleannes: <div id="user_cleannes<%=rating.id%>"></div>
-atmosphere: <div id="user_atmosphere<%=rating.id%>"></div>
-<p>Text: <%=rating.text%><br/>
-Author: <%=rating.user.email%></p>
+Kitchen: <div id="user_kitchen<%=rating.id%>"></div>
+Servise: <div id="user_servise<%=rating.id%>"></div>
+Cleannes: <div id="user_cleannes<%=rating.id%>"></div>
+Atmosphere: <div id="user_atmosphere<%=rating.id%>"></div> </br>
+<h4>"<%=rating.text%>"</h4><br/>
+<b style="color: green;"><%=rating.user.email%></b></p>
+
+</br  >
 <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#rating_comment_<%=rating.id%>">
     <span class="glyphicon glyphicon-plus">Відповісти</span>
 </button>
