--- a/app/views/rating_comments/_form.html.erb
+++ b/app/views/rating_comments/_form.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+	<div class="notice"> <%= flash[:notice] %> </div>
+<% end %>
 <p><%=f.label :text%><br/>
 <%=f.text_area :text%></p>
 <p><%=f.submit :commit%></p>
