--- a/app/views/rating_comments/_rating_comment.html.erb
+++ b/app/views/rating_comments/_rating_comment.html.erb
@@ -1,10 +1,10 @@
 <hr>
 <p><%=comment.text%><p>
 <p>Author: <%=comment.user.email%></p>
-    <%=link_to rating_comment_positiv_path(comment.id) do%>
+    <%=link_to positiv_vote_path(comment.class.name,comment.id) do%>
       <span class="glyphicon glyphicon-plus"></span>
     <%end%>
-    <%=RatingCommentVote.where(rating_comment_id: comment.id).sum(:score)%>
-    <%=link_to rating_comment_negativ_path(comment.id) do%>
+     <%=Vote.where(resource_type:comment.class.name,resource_id:comment.id).sum(:score)%>
+    <%=link_to negativ_vote_path(comment.class,name,comment.id) do%>
       <span class="glyphicon glyphicon-minus"></span>
     <%end%>
