fix nil user and view category

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,6 @@
+<div class="container-fluid" >
+	<div class="text-center">
+		<h2>Категорія: "<%= @category.name %>"</h2>
+	</div>
+</div>
 <%= render @institutions%>
