--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,6 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
+
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img style="position: relative;" src="images/index4.jpg" alt="rest">
@@ -7,3 +8,70 @@
   </div> 
 </div>
 
+<section class="characteristics">
+  <div class="container">
+      <div class="text-center">
+        <img src="assets/images/handmade_logo.png" alt="" width="300px">
+      </div>
+      <h3 class="text-center margin-bottom-lg position-relative">
+        Чому саме ми?
+      </h3>
+     <div class="col-lg-3 col-md-6 char_col">
+        <div class="char_item d-flex flex-row align-items-center justify-content-start">
+          <div class="char_icon">
+            <span class="glyphicon glyphicon-dashboard" style="font-size: 25px;"></span>
+          </div>
+          <div class="char_content">
+            <div class="char_title">Швидко</div>
+            <div class="char_subtitle">з нами ви без зусиль знайдете хороший заклад</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 char_col">
+        <div class="char_item d-flex flex-row align-items-center justify-content-start">
+          <div class="char_icon">
+            <span class="glyphicon glyphicon-bullhorn" style="font-size: 25px;"></span>
+          </div>
+          <div class="char_content">
+            <div class="char_title">Критикуйте</div>
+            <div class="char_subtitle">критика допоможе якісно обирати потрібне вам місце</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 char_col">
+        <div class="char_item d-flex flex-row align-items-center justify-content-start">
+          <div class="char_icon">
+            <span class="glyphicon glyphicon-eye-open" style="font-size: 25px;"></span>
+          </div>
+          <div class="char_content">
+            <div class="char_title">Слідкуйте за новинами</div>
+            <div class="char_subtitle">майже кожного тиждня додається новий заклад</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 char_col">
+        <div class="char_item d-flex flex-row align-items-center justify-content-start">
+          <div class="char_icon">
+            <span class="  glyphicon glyphicon-fire" style="font-size: 25px;"></span>
+          </div>
+          <div class="char_content">
+            <div class="char_title">Будьте в тренді</div>
+            <div class="char_subtitle">На Quick-chik зареєструвалось вже 2 людей! Стань третім </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+    
+            
+            
+            
+          
+
+          
+         
