+new style to about and institutions

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -25,12 +25,12 @@
 }
 
 </style>
-
+<body style="background-color: #F5F5F5;">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="/images/index4.jpg" alt="rest">
+      <img style="opacity: 0.9;" src="/images/index4.jpg" alt="rest">
          </div>
   </div> 
 </div>
