--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
           </a>
           <ul class="dropdown-menu">
             <% Category.all.each do |category|%>
-            <li><%=link_to category.name , category_path(category.name)%></li>
+            <li data-toggle="modal"><%=link_to category.name , category_path(category.name)%></li>
             <%end%> 
           </ul>
         </li>
