--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,21 +1,23 @@
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img style="position: relative;" src="images/index4.jpg" alt="rest">
+      <img style="position: relative; opacity: 0.9;" src="images/index4.jpg" alt="rest">
          </div>
   </div> 
 </div>
 
+<body style="background-color: #F5F5F5;">
 <section class="characteristics">
-  <div class="container">
+  <div class="container" style="margin-top: 10%;">
       <div class="text-center">
         <img src="assets/images/handmade_logo.png" alt="" width="300px">
       </div>
-      <h3 class="text-center margin-bottom-lg position-relative">
+      <h1 class="text-center margin-bottom-lg position-relative">
         Чому саме ми?
-      </h3>
+      </h1>
      <div class="col-lg-3 col-md-6 char_col">
         <div class="char_item d-flex flex-row align-items-center justify-content-start">
           <div class="char_icon">
@@ -66,7 +68,7 @@
     </div>
   </div>
 </section>
-
+</body>
     
             
             
