--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -68,13 +68,13 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
  
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email' %>
 
-<div style="margin-top: 4%;"></div>
+<div style="margin-top: 4%;">
   <div style="margin-right: 27%;">
     <%= button_tag( :class => "btn btn-lg btn-primary btn-block") do %>
       <i class="zmdi zmdi-sign-in m-r-xs"></i>Send me new password
       <%end%>
      <%end%>
-     
+
 
 <%= render "users/shared/links" %>
 </div>
