--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,1 @@
-<a><%=link_to category.name, category_path(category.name), class:"text-secondary"%> ~ </a
+<a><%=link_to category.name, category_path(category.name), class:"text-secondary"%> | </a
