--- a/app/views/userparams/show.html.erb
+++ b/app/views/userparams/show.html.erb
@@ -1,32 +1,94 @@
 <style>
-	body {
-		background-color: #d0d0d0;
-	}
+	body { 
+  width: 100%;
+  height:100%;
+  font-family: 'Open Sans', sans-serif;
+  background: #092756;
+  background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
+  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+  background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+  background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
+}
+.rounded {
+counter-reset: li; 
+list-style: none; 
+font: 14px "Trebuchet MS", "Lucida Sans";
+padding: 0;
+text-shadow: 0 1px 0 rgba(255,255,255,.5);
+
+}
+.rounded a {
+position: relative;
+display: block;
+padding: .4em .4em .4em 2em;
+margin: .5em 0;
+background: #DAD2CA;
+color: #444;
+text-decoration: none;
+border-radius: .3em;
+transition: .3s ease-out;
+}
+.rounded a:hover {background: #E9E4E0;}
+.rounded a:hover:before {transform: rotate(360deg);}
+.rounded a:before {
+content: counter(li);
+counter-increment: li;
+position: absolute;
+left: -1.3em;
+top: 50%;
+margin-top: -1.3em;
+background: #8FD4C1;
+height: 2em;
+width: 2em;
+line-height: 2em;
+border: .3em solid white;
+text-align: center;
+font-weight: bold;
+border-radius: 2em;
+transition: all .3s ease-out;
+}
 </style>
 
-<div class="container-fluid">
-  <div class="text-center">
 
-</div>
-<div class="row"  style="margin-left: 30%;">
-    <div class="col-sm-6">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-        <h2> <b><%= @userparam.name%>`s</b> profile! </h2>
-        </div>
-       <div class="panel-body">
-<h4>Full name: <%= @userparam.full_name%></h4>
-<h4>Country: <%= @userparam.country%></h4>
-<h4>City: <%= @userparam.city%></h4>
-<h4>Adress: <%= @userparam.adress%></h4>
-<h4>Data of birthday: <%= @userparam.dofb%></h4>
+
+
 
 </div>
 </div>
-<%= link_to "Edit", edit_userparam_path(@userparam.id)%>
-<%= image_tag @userparam.avatar %>
 </div>
+<section id="user-profile">
+  <div class="container" style="color: silver;">
+    <div class="row">
+      
+      <div class="col-md-4 text-center">
+      <h2 class="text-center margin-bottom-lg position-relative">Your profile</h2>
+        <img class="avatar" src="<%= @userparam.avatar_url %>" alt="">
+        <hr>
+        <%= link_to "Edit", edit_userparam_path(@userparam.id)%>
+      </div>
+      <div class="col-md-4 info" style="margin-top: 8%; ">
+        <h4><i class="zmdi zmdi-account"></i> <%= @userparam.full_name %></h4>
+        <h4><i class="zmdi zmdi-pin"></i> <%= @userparam.country %>, <%= @userparam.city %></h4>
+        <h4><i class="zmdi zmdi-calendar"></i> <%= @userparam.dofb.strftime("%b,%d,%Y") %></h4>
+
+      </div>
+      <h2 class="text-center margin-bottom-lg position-relative"><%= @userparam.name%>, start QuickCchik!</h2>
+       <div class="col-md-4 info">
+      <ul class="rounded" >
+         <% Category.all.each do |category|%>
+           <h4> <li data-toggle="modal"><%=link_to category.name , category_path(category.name)%></li></h4>
+            <%end%> 
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- Modal -->
+<div id="modal-window" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
 </div>
-</div>
+
 
 
